--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -149,7 +149,7 @@
       <Label text="Console" />
       <ScrollPane prefHeight="387.0" prefWidth="719.0">
          <content>
-            <TextArea fx:id="textAreaConsole" prefHeight="300.0" prefWidth="718.0" />
+            <TextArea fx:id="textAreaConsole" prefHeight="300.0" prefWidth="717.0" wrapText="true" />
          </content>
       </ScrollPane>
   </children>
