--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -123,17 +123,17 @@
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="412.0" prefWidth="719.0">
                            <children>
                               <TextArea layoutX="40.0" layoutY="26.0" prefHeight="114.0" prefWidth="638.0" text="Develop and implement an online service using empirical data to help make informed decisions on naming their newborn babies.  Sample Scenario of Application: (i) Parents seeking advices on naming their babies; (ii) A couple seeking advices on naming their pets&#10;&#10;Input&#10;* iDadName, iMomName: Names of the baby’s dad and mom&#10;* iDadYOB, iMomYOB: Years of birth of the baby’s dad and mom&#10;* iVintageYear (optional): A year to be chosen from 1880 to 2019; If not chosen, set the value of iVintageYear to 2019&#10;&#10;Output&#10;* oBoyName: Recommended name for baby boy according to the NK-T4 Algorithm&#10;* oGirlName: Recommended name for baby girl according to the NK-T4 Algorithm&#10;* plus, WOW factor on user experience and algorithm design!" wrapText="true" />
-                              <TextField layoutX="238.0" layoutY="160.0" prefHeight="18.0" prefWidth="96.0" text="David" />
+                              <TextField fx:id="inputFatherName" layoutX="238.0" layoutY="160.0" prefHeight="18.0" prefWidth="96.0" text="David" />
                               <Label layoutX="128.0" layoutY="164.0" prefHeight="18.0" prefWidth="110.0" text="Name of the Father" />
                               <Label layoutX="368.0" layoutY="163.0" prefHeight="18.0" prefWidth="116.0" text="Name of the Mother" />
-                              <TextField layoutX="484.0" layoutY="160.0" prefHeight="18.0" prefWidth="96.0" text="Desire" />
+                              <TextField fx:id="inputMotherName" layoutX="484.0" layoutY="160.0" prefHeight="18.0" prefWidth="96.0" text="Desire" />
                               <Label layoutX="135.0" layoutY="203.0" prefHeight="18.0" prefWidth="103.0" text="YOB of the Father" />
-                              <TextField layoutX="238.0" layoutY="199.0" prefHeight="18.0" prefWidth="96.0" text="1990" />
+                              <TextField fx:id="inputDadYOB" layoutX="238.0" layoutY="199.0" prefHeight="18.0" prefWidth="96.0" text="1990" />
                               <Label layoutX="368.0" layoutY="202.0" prefHeight="18.0" prefWidth="116.0" text="YOB of Mother" />
-                              <TextField layoutX="484.0" layoutY="198.0" prefHeight="18.0" prefWidth="96.0" text="1990" />
+                              <TextField fx:id="inputMumYOB" layoutX="484.0" layoutY="198.0" prefHeight="18.0" prefWidth="96.0" text="1990" />
                               <Label layoutX="211.0" layoutY="247.0" prefHeight="18.0" prefWidth="103.0" text="Vintage Year" />
-                              <TextField layoutX="311.0" layoutY="243.0" prefHeight="18.0" prefWidth="96.0" text="2019" />
-                              <Button layoutX="308.0" layoutY="281.0" mnemonicParsing="false" text="Start Query" />
+                              <TextField fx:id="inputVintageYear"  layoutX="311.0" layoutY="243.0" prefHeight="18.0" prefWidth="96.0" text="2019" />
+                              <Button layoutX="308.0" layoutY="281.0" mnemonicParsing="false" text="Start Query" onAction="#doBabyNameRecommendation"/>
                            </children>
                         </AnchorPane>
                     </content>
