--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -134,8 +134,8 @@
                               <Label layoutX="368.0" layoutY="202.0" prefHeight="18.0" prefWidth="116.0" text="YOB of Mother" />
                               <TextField fx:id="inputMumYOB" layoutX="484.0" layoutY="198.0" prefHeight="18.0" prefWidth="96.0" text="1990" />
                               <Label layoutX="211.0" layoutY="247.0" prefHeight="18.0" prefWidth="103.0" text="Vintage Year" />
-                              <TextField fx:id="inputVintageYear"  layoutX="311.0" layoutY="243.0" prefHeight="18.0" prefWidth="96.0" text="2019" />
-                              <Button fx:id="application1Run" layoutX="308.0" layoutY="281.0" mnemonicParsing="false" text="Start Query" onAction="#doBabyNameRecommendation"/>
+                              <TextField fx:id="inputVintageYear" layoutX="311.0" layoutY="243.0" prefHeight="18.0" prefWidth="96.0" text="2019" />
+                              <Button fx:id="application1Run" layoutX="308.0" layoutY="281.0" mnemonicParsing="false" onAction="#doBabyNameRecommendation" text="Start Query" />
                            </children>
                         </AnchorPane>
                     </content>
@@ -194,7 +194,7 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <TextArea layoutX="40.0" layoutY="14.0" prefHeight="56.0" prefWidth="642.0" text="Develop and implement an online service using empirical data to help make informed decisions on predicting scores for compatible pairs.  Sample Scenario of Application: (i) A person seeking advices on the chance of engaging in love affairs with someone of a different gender; (ii) A person seeking advices on the chance of engaging in love affairs with someone of the same gender.&#10;&#10;Input&#10;* iName, iGender, iYOB: Particulars of the person seeking advices&#10;* iNameMate, iGenderMate: Specify the name and gender of the person to be matched&#10;* iPreference: Specify the preference on having a younger or older soulmate&#10;&#10;Output&#10;* oScore: Provide a score of compatibility (0%: Not Compatible; 100%: Perfect Match) according to the NK-T6 Algorithm&#10;* plus, WOW factor on user experience and algorithm design!" wrapText="true" />
+                              <TextArea layoutX="40.0" layoutY="14.0" prefHeight="56.0" prefWidth="642.0" text="This is a service using empirical data to help you make informed decisions on predicting the compatibility of you and your partner (i.e. Soulmate). " wrapText="true" />
                               <Label layoutX="60.0" layoutY="117.0" text="Name" />
                               <TextField fx:id="task6_nameField" layoutX="108.0" layoutY="113.0" prefHeight="26.0" prefWidth="88.0" text="David" />
                               <Label layoutX="241.0" layoutY="116.0" text="Gender" />
