--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -195,7 +195,7 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <TextArea layoutX="40.0" layoutY="14.0" prefHeight="56.0" prefWidth="642.0" text="This is a service using empirical data to help you make informed decisions on predicting the compatibility of you and your partner (i.e. Soulmate). " wrapText="true" />
+                              <TextArea layoutX="40.0" layoutY="14.0" prefHeight="56.0" prefWidth="642.0" text="This is a service using empirical data to help you make informed decisions on predicting the compatibility of you and your partner (i.e. Soulmate). The predicted compatibility will be corrected to 2 decimal places." wrapText="true" />
                               <Label layoutX="60.0" layoutY="117.0" text="Name" />
                               <TextField fx:id="task6_nameField" layoutX="108.0" layoutY="113.0" prefHeight="26.0" prefWidth="88.0" text="David" />
                               <Label layoutX="241.0" layoutY="116.0" text="Gender" />
